# mybot

./: .gitignore  CMakeLists.txt  LICENSE  README.md  _run.sh  _set.sh  requirements.txt
doc/ann/: 小艺深度研究报告-深度研究报告@xiaoyi.huawei.com_20251204173129.docx  小艺深度研究报告-深度研究报告@xiaoyi.huawei.com_20251205092021.docx  小艺深度研究报告-深度研究报告@xiaoyi.huawei.com_20251205111112.docx  小艺深度研究报告-深度研究报告@xiaoyi.huawei.com_20251205172712.docx  小艺深度研究报告-深度研究报告@xiaoyi.huawei.com_20251206182859.docx
src/: Dashun_linux.hpp  main.cpp  mainCompressedCameraClient.py  mainParser.cpp  mainParserNet.cpp  mainParserNet_client.py  test_cnnBuilder_20251224_0.cpp  test_conv_main_20251224_0.cpp  test_imageLoader_main.cpp  test_nn_20251207_0.hpp  test_nn_20251219_0.hpp
src/hd/: Camera.cpp  I2C.cpp  MPU6050.cpp  PCA9685.cpp  Robot.hpp
src/nn/: ILayer.hpp
